# Scribe

./: .gitignore  .gitmodules  Cargo.toml  README.md  problems.md
contracts/: 01_Addition.yul  (+7 more)
crates/miden-integration-tests/: Cargo.toml  test_output.masm
crates/miden-integration-tests/snapshots/: erc20__tests__parse_erc20.snap  scribe__parser__tests__parse_cruft.snap  scribe__parser__tests__parse_fibonnaci.snap  scribe__parser__tests__parse_function_def.snap  scribe__parser__tests__parse_function_def_with_return.snap  scribe__parser__tests__parse_switch_statement.snap
crates/miden-integration-tests/src/: lib.rs
crates/miden-integration-tests/tests/: future.rs  lib.rs  lifetime.rs  memory.rs  optimization.rs  quickcheck_tests.rs  test.rs  u256.rs  utils.rs
crates/papyrus/: Cargo.toml
crates/papyrus/src/: ast_optimization.rs  executor.rs  grammar.pest  lib.rs  miden_generator.rs  type_inference.rs  utils.rs
crates/papyrus/src/miden_asm/: u256div_by_one.masm  u256shl_unsafe.masm  u256shr_unsafe.masm
crates/papyrus/src/optimizer/: const_variable.rs  cost_estimator.rs  for_loop_to_repeat.rs  mod.rs  variable_assignment.rs
crates/papyrus/src/snapshots/: papyrus__parser__tests__parse_cruft.snap  papyrus__parser__tests__parse_fibonnaci.snap  papyrus__parser__tests__parse_function_call.snap  (+7 more)
transpiler/: .gitignore  Cargo.toml  history.txt
transpiler/src/: ast_optimization.rs  contracts.rs  executor.rs  grammar.pest  lib.rs  main.rs  miden_generator.rs  parser.rs  repl.rs  test_utilities.rs  type_inference.rs  types.rs  utils.rs  zero_generator.rs
transpiler/src/miden_asm/: u256.masm  u256add_unsafe.masm  u256and_unsafe.masm  u256eq_unsafe.masm  u256gt_unsafe.masm  u256iszero_unsafe.masm  u256lt_unsafe.masm  u256mul_unsafe.masm  u256or_unsafe.masm  u256shl_unsafe.masm  u256sub_unsafe.masm  u256xor_unsafe.masm
transpiler/src/snapshots/: scribe__parser__tests__parse_fibonnaci.snap  scribe__parser__tests__parse_fibonnaci.snap.new  scribe__parser__tests__parse_function_call.snap  scribe__parser__tests__parse_function_def.snap  scribe__parser__tests__parse_function_def.snap.new  scribe__parser__tests__parse_function_def_with_return.snap  scribe__parser__tests__parse_function_def_without_return.snap  scribe__parser__tests__parse_if.snap  scribe__parser__tests__parse_if.snap.new  scribe__parser__tests__parse_reference_chain.snap  scribe__parser__tests__parse_switch_statement.snap  scribe__parser__tests__parse_var_and_add.snap  scribe__parser__tests__parse_var_declaration.snap  scribe__parser__tests__parse_var_declaration_with_types.snap
transpiler/tests/: bugfixes.rs  erc20.rs  milestone_1.rs  milestone_2.rs  quickcheck.rs  test.rs
transpiler/tests/snapshots/: erc20__tests__parse_erc20.snap
(+9 files in other folders)
